Overflow X bug on scroll fix.

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -192,6 +192,7 @@ input:focus:-ms-input-placeholder {
 .post-scroll {
     flex-direction: column;
     overflow-y: scroll;
+    overflow-x: hidden;
     height: 100%;
     width: 100%;
     padding-bottom: 25px;
